# cpp-preprocessor

./: CMakeLists.txt  DefineCollector.cpp  DefineCollector.h  DefineMacro.cpp  DefineMacro.h  Preprocessor.cpp  Preprocessor.h  PreprocessorVisitor.cpp  PreprocessorVisitor.h  main.cpp
cmake/: ExternalAntlr4Cpp.cmake  FindANTLR.cmake  README.md
grammar/: Cpp14Lexer.g4  Cpp14Parser.g4  DefineLexer.g4  DefineParser.g4
